--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
     "vitest": "^1.2.0"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.27.1"
   }
 }
