--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@relic-js/relic",
+  "name": "@relicjs/relic",
   "version": "0.0.1",
   "description": "",
   "main": "./dist/index.js",
