--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@relicjs/relic",
   "version": "0.0.1",
+  "private": false,
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
