Add publish command

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src",
-    "version": "changeset version"
+    "version": "changeset version",
+    "publish": "npm build && changeset publish"
   },
   "keywords": [],
   "author": "",
