--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -2,18 +2,23 @@
   "name": "todo",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev-server": "tsx watch --tsconfig tsconfig.server.json ./src/relic/server.ts"
   },
   "dependencies": {
+    "@hono/node-server": "^1.11.1",
     "@tanstack/react-query": "^5.32.1",
+    "@types/better-sqlite3": "^7.6.10",
+    "better-sqlite3": "^9.6.0",
     "drizzle-orm": "^0.30.10",
+    "hono": "^4.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tsx": "^4.9.3",
     "zod": "^3.23.5"
   },
   "devDependencies": {
@@ -22,6 +27,8 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "esbuild": "^0.20.2",
+    "esbuild-register": "^3.5.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
