--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "dev-server": "tsx watch --tsconfig tsconfig.server.json ./src/relic/server.ts"
+    "dev-server": "tsx watch --tsconfig tsconfig.server.json ./src/server/server.ts",
+    "insert-test-data": "tsx ./scripts/insert-test-data.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.11.1",
