--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "root",
-    "private": "true",
-    "scripts": {
-        "build": "turbo build"
-    },
-    "dependencies": {
-        "turbo": "^1.13.3"
-    }
+  "name": "root",
+  "private": "true",
+  "scripts": {
+    "build": "turbo build"
+  },
+  "dependencies": {
+    "turbo": "^1.13.3"
+  },
+  "packageManager": "pnpm@8.15.4"
 }
