--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,7 @@
     "scripts": {
         "build": "tsup",
         "dev": "pnpm build --watch",
-        "lint": "eslint --cache --ext \".js,.ts,.tsx\" --ignore-path ../../.gitignore src",
+        "type-check": "tsc --noEmit",
         "ts-watch": "tsc --watch"
     },
     "files": [
@@ -29,7 +29,6 @@
         "zod": "^3.23.5"
     },
     "devDependencies": {
-        "eslint": "^9.2.0",
         "tsup": "^8.0.2",
         "drizzle-orm": "^0.30.10",
         "zod": "^3.23.5"
