--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": "true",
   "scripts": {
-    "build": "turbo build"
+    "build": "turbo build",
+    "type-check": "turbo type-check"
   },
   "dependencies": {
     "turbo": "^1.13.3"
