--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,7 +15,7 @@
     "scripts": {
         "build": "tsup",
         "dev": "pnpm build --watch",
-        "lint": "eslint --cache --ext \".js,.ts,.tsx\" --ignore-path ../../.gitignore src",
+        "type-check": "tsc --noEmit",
         "ts-watch": "tsc --watch"
     },
     "files": [
@@ -34,7 +34,6 @@
         "@relic/core": "0.0.1",
         "@tanstack/query-core": "^5.32.1",
         "drizzle-orm": "^0.30.10",
-        "eslint": "^9.2.0",
         "zod": "^3.23.5",
         "tsup": "^8.0.2"
     },
