Fix build dependencies and add URL env variable

--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,9 @@
         "build": {
             "outputs": [
                 "dist/**"
+            ],
+            "dependsOn": [
+                "^build"
             ]
         },
         "type-check": {}
