--- a/examples/meeting-room-scheduler/client/tsconfig.json
+++ b/examples/meeting-room-scheduler/client/tsconfig.json
@@ -20,9 +20,7 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
         "baseUrl": ".",
-        "paths": {
-            "@mrs/shared": ["@mrs/shared/src"]
-        }
+        "customConditions": ["typescript"]
     },
     "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
