--- a/examples/meeting-room-scheduler/client/package.json
+++ b/examples/meeting-room-scheduler/client/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "exports": {
+    "./client": {
+      "typescript": "./src/relic-client.ts"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
