--- a/benchmarks/server/tsconfig.json
+++ b/benchmarks/server/tsconfig.json
@@ -9,5 +9,5 @@
         "baseUrl": ".",
         "customConditions": ["typescript"]
     },
-    "include": ["src/**/*.ts"]
+    "include": ["src/**/*.ts", "scripts/**/*.ts"]
 }
