Add stdev to benchmarks

--- a/benchmarks/server/package.json
+++ b/benchmarks/server/package.json
@@ -8,10 +8,8 @@
     "start:rest": "pnpm down:relic && pnpm up:rest && sleep 3 && pnpm server:rest",
     "server:relic": "NODE_ENV=production tsx --conditions=typescript src/relic/index.ts",
     "server:rest": "NODE_ENV=production tsx --conditions=typescript src/rest/index.ts",
-    "bench:relic": "k6 run scripts/relic.js",
-    "bench:rest": "k6 run scripts/rest.js",
-    "bench:relic-all": "tsx scripts/relic-all.ts",
-    "bench:rest-all": "tsx scripts/rest-all.ts",
+    "bench:relic": "tsx scripts/relic-all.ts",
+    "bench:rest": "tsx scripts/rest-all.ts",
     "up:relic": "docker compose -f docker-compose.relic.yml up -d",
     "up:rest": "docker compose -f docker-compose.rest.yml up -d",
     "down:relic": "docker compose -f docker-compose.relic.yml down",
